--- a/VidCoder/View/ChooseName.xaml
+++ b/VidCoder/View/ChooseName.xaml
@@ -1,16 +1,16 @@
 ﻿<Window 
-	x:Class="VidCoder.View.ChoosePresetName"
+	x:Class="VidCoder.View.ChooseName"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:prop="clr-namespace:VidCoder.Properties"
 	xmlns:res="clr-namespace:VidCoder.Resources"
 	Style="{StaticResource NormalWindow}"
-	Title="{x:Static res:MiscRes.PresetNameDialogTitle}" Height="152" Width="250" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" ShowInTaskbar="False" Loaded="Window_Loaded"
+	Title="{Binding Title}" Height="152" Width="250" WindowStartupLocation="CenterOwner" ResizeMode="NoResize" ShowInTaskbar="False" Loaded="Window_Loaded"
 	TextOptions.TextFormattingMode="Display">
 	<Grid>
-		<TextBlock Margin="12,12,0,0" VerticalAlignment="Top" Text="{x:Static res:MiscRes.ChoosePresetName}" HorizontalAlignment="Left" TextWrapping="Wrap"/>
+		<TextBlock Margin="12,12,0,0" VerticalAlignment="Top" Text="{Binding Subtitle}" HorizontalAlignment="Left" TextWrapping="Wrap"/>
 		<TextBox 
-			Margin="12,43,12,0" Name="presetNameText" Text="{Binding PresetName, UpdateSourceTrigger=PropertyChanged}" Height="23" VerticalAlignment="Top"
+			Margin="12,43,12,0" Name="presetNameText" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}" Height="23" VerticalAlignment="Top"
 			VerticalContentAlignment="Center"/>
 
 		<StackPanel
