--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -2,6 +2,7 @@
 	x:Class="VidCoder.View.PickerWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:VidCoder.Controls"
 	xmlns:res="clr-namespace:VidCoder.Resources"
 	xmlns:viewModel="clr-namespace:VidCoder.ViewModel"
 	Title="{Binding WindowTitle}"
@@ -143,8 +144,42 @@
 				Grid.Row="1"
 				Margin="12"
 				VerticalScrollBarVisibility="Auto">
-				<!--  Audio/Subtitles  -->
 				<StackPanel VerticalAlignment="Top" Orientation="Vertical">
+					<!--  Title selection  -->
+					<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:PickerRes.TitleSelection}" />
+					<StackPanel Style="{StaticResource ConfigSectionStack}">
+						<CheckBox HorizontalAlignment="Left" IsChecked="{Binding TitleRangeSelectEnabled}">
+							<StackPanel Orientation="Horizontal">
+								<TextBlock
+									Margin="0,0,4,0"
+									VerticalAlignment="Center"
+									Text="{x:Static res:QueueTitlesRes.LengthRangePre}" />
+								<controls:NumberBox
+									Width="46"
+									AllowEmpty="False"
+									IsEnabled="{Binding TitleRangeSelectEnabled}"
+									Minimum="0"
+									Number="{Binding TitleRangeSelectStartMinutes,
+								                                     Mode=TwoWay}" />
+								<TextBlock
+									Margin="4,0,4,0"
+									VerticalAlignment="Center"
+									Text="{x:Static res:QueueTitlesRes.LengthRangeMid}" />
+								<controls:NumberBox
+									Width="46"
+									AllowEmpty="False"
+									IsEnabled="{Binding TitleRangeSelectEnabled}"
+									Minimum="0"
+									Number="{Binding TitleRangeSelectEndMinutes,
+								                                     Mode=TwoWay}" />
+								<TextBlock
+									Margin="4,0,0,0"
+									VerticalAlignment="Center"
+									Text="{x:Static res:QueueTitlesRes.LengthRangePost}" />
+							</StackPanel>
+						</CheckBox>
+					</StackPanel>
+
 					<!--  Audio selection  -->
 					<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:PickerRes.AudioSelection}" />
 					<StackPanel Style="{StaticResource ConfigSectionStack}">
