--- a/VidCoder/View/QueueTitlesWindow.xaml
+++ b/VidCoder/View/QueueTitlesWindow.xaml
@@ -105,6 +105,16 @@
 			Grid.Row="2"
 			Margin="15,10,15,0"
 			Orientation="Vertical">
+			<controls:SplitButton
+				Height="25"
+				Margin="0 10 0 0"
+				HorizontalAlignment="Left"
+				VerticalAlignment="Center"
+				Command="{Binding WindowManagerVM.OpenPickerWindowCommand}"
+				MenuItemsSource="{Binding PickersVM.PickerButtonMenuItems}">
+				<TextBlock Margin="4 0" Text="{Binding PickersVM.PickerButtonText}" />
+			</controls:SplitButton>
+
 			<CheckBox
 				Margin="0,10,0,0"
 				HorizontalAlignment="Left"
@@ -132,48 +142,13 @@
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="Auto" />
 					<ColumnDefinition />
-					<ColumnDefinition Width="Auto" />
 				</Grid.ColumnDefinitions>
 
 				<CheckBox
 					Grid.Column="0"
 					HorizontalAlignment="Left"
 					VerticalAlignment="Center"
-					Content="{x:Static res:QueueTitlesRes.OverrideDirectoryCheckBox}"
-					IsChecked="{Binding DirectoryOverrideEnabled}" />
-
-				<TextBox
-					Grid.Column="1"
-					Height="22"
-					Margin="5,0,0,0"
-					VerticalAlignment="Center"
-					VerticalContentAlignment="Center"
-					IsEnabled="{Binding DirectoryOverrideEnabled,
-				                             UpdateSourceTrigger=PropertyChanged}"
-					Text="{Binding DirectoryOverride}" />
-
-				<Button
-					Grid.Column="2"
-					MinWidth="80"
-					Margin="10,0,0,0"
-					Command="{Binding PickDirectoryCommand}"
-					Content="{x:Static res:CommonRes.Browse}"
-					IsEnabled="{Binding DirectoryOverrideEnabled,
-				                            UpdateSourceTrigger=PropertyChanged}"
-					Padding="10,0" />
-			</Grid>
-
-			<Grid Margin="0,10,0,0">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="Auto" />
-					<ColumnDefinition />
-				</Grid.ColumnDefinitions>
-
-				<CheckBox
-					Grid.Column="0"
-					HorizontalAlignment="Left"
-					VerticalAlignment="Center"
-					Content="{x:Static res:QueueTitlesRes.OverrideNameFormatCheckBox}"
+					Content="{x:Static res:CommonRes.OverrideNameFormatCheckBox}"
 					IsChecked="{Binding NameOverrideEnabled}" />
 
 				<TextBox
@@ -200,7 +175,7 @@
 				Margin="0,0,6,0"
 				HorizontalAlignment="Right"
 				VerticalAlignment="Bottom"
-				Command="{Binding AcceptCommand}"
+				Command="{Binding AddToQueueCommand}"
 				Content="{x:Static res:MainRes.AddToQueueLabel}"
 				IsDefault="True"
 				Padding="6 0" />
